home component responsive

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -2,7 +2,36 @@
     font-size: 90px;
     width: 100%;
     font-weight: 600;
-    text-align: center;
+    text-align: center;@media screen and (max-width: 768px) {
+  .home h2 {
+    font-size: 48px;
+    margin-top: 30px;
+    padding: 0 15px;
+  }
+
+  .icons {
+    width: 24px;
+  }
+
+  .icons-list {
+    gap: 16px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .home h2 {
+    font-size: 36px;
+  }
+
+  .icons {
+    width: 20px;
+  }
+
+  .icons-list {
+    gap: 12px;
+  }
+}
+
     margin-top: 50px;
 }
 .home h2 span{
